--- a/CSS/main.css
+++ b/CSS/main.css
@@ -12,7 +12,7 @@
 }
 @keyframes pulsate {
   0% {
-    box-shadow: 0 0 25px #f49c13, 0 0 50px #FFC93A;
+    box-shadow: 0 0 25px #FF41AA, 0 0 50px #FF41AA;
   }
 }
 @keyframes move-chevron {
@@ -34,7 +34,7 @@
 }
 @keyframes camuflaje {
   0% {
-    color: #f49c13;
+    color: #FF41AA;
   }
 }
 .contenedor_animationChevron {
@@ -134,13 +134,13 @@
   -moz-transform: translateY(15rem);
 }
 .card:hover .dp i {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .card:hover {
-  box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+  box-shadow: #FF41AA 3px 4px 17px;
 }
 .card:hover .card_title {
-  color: #f49c13;
+  color: #FF41AA;
 }
 
 .dp {
@@ -215,9 +215,9 @@
   border-radius: 10px;
 }
 .card_content .contenedor_btn_card .btn_card:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 
 /* @media screen and (min-width: 320px) {
@@ -267,12 +267,12 @@
 }
 .card_masServicios:hover {
   transition: all 1s ease-in-out;
-  box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
-  outline: 1px solid #f49c13;
+  box-shadow: #FF41AA 3px 4px 17px;
+  outline: 1px solid #FF41AA;
   outline-offset: -8px;
 }
 .card_masServicios:hover .card_title {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .card_masServicios .contenedor_btn_card {
   width: 100%;
@@ -292,9 +292,9 @@
   border-radius: 10px;
 }
 .card_masServicios .contenedor_btn_card .btn_card:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 
 .dp_masServicios {
@@ -475,10 +475,10 @@
 }
 
 .adn_container:hover .adn_botton {
-  background-color: #f49c13;
+  background-color: #FF41AA;
 }
 .adn_container:hover .adn_line {
-  border: 1px solid #f49c13;
+  border: 1px solid #FF41AA;
 }
 
 @keyframes rotar {
@@ -579,16 +579,16 @@
   }
 }
 .valores_content:hover span:nth-child(1), .beneficio_content:hover span:nth-child(1) {
-  background: linear-gradient(to right, transparent, #f49c13);
+  background: linear-gradient(to right, transparent, #FF41AA);
 }
 .valores_content:hover span:nth-child(2), .beneficio_content:hover span:nth-child(2) {
-  background: linear-gradient(to bottom, transparent, #f49c13);
+  background: linear-gradient(to bottom, transparent, #FF41AA);
 }
 .valores_content:hover span:nth-child(3), .beneficio_content:hover span:nth-child(3) {
-  background: linear-gradient(to left, transparent, #f49c13);
+  background: linear-gradient(to left, transparent, #FF41AA);
 }
 .valores_content:hover span:nth-child(4), .beneficio_content:hover span:nth-child(4) {
-  background: linear-gradient(to top, transparent, #f49c13);
+  background: linear-gradient(to top, transparent, #FF41AA);
 }
 
 @keyframes girar {
@@ -690,7 +690,7 @@
   -o-transition: all 1s ease-in-out;
 }
 .masServicios_intro_content h1:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_intro_content p {
   color: #E0E0E0;
@@ -705,7 +705,7 @@
   margin-bottom: 2em;
 }
 .masServicios_intro_content p:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 
 .masServicios_speach {
@@ -736,7 +736,7 @@
   width: 90%;
 }
 .masServicios_speach .masServicios_brindamos h2:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_speach .masServicios_brindamos .beneficios {
   display: flex;
@@ -778,7 +778,7 @@
   text-align: center;
 }
 .masServicios_speach .masServicios_brindamos .beneficios .beneficios_item p:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_speach .masServicios__speach__container__paragraphBeneficios {
   display: flex;
@@ -799,7 +799,7 @@
   justify-content: center;
   padding: 2em;
   border-radius: 20px;
-  box-shadow: #202124 3px 4px 17px;
+  box-shadow: #FF41AA 3px 4px 17px;
   transition: all 1s ease-in-out;
   width: 68%;
 }
@@ -830,7 +830,7 @@
   transition: all 1s ease-in-out;
 }
 .masServicios_speach .masServicios__speach__benefician i:hover {
-  text-shadow: #f49c13 3px 4px 17px;
+  text-shadow: #FF41AA 3px 4px 17px;
 }
 .masServicios_speach .masServicios__speach__benefician .benefician_container {
   display: flex;
@@ -842,11 +842,7 @@
   min-height: 400px;
   width: 95%;
   color: #E0E0E0;
-  text-shadow: rgb(87, 169, 218) 3px 4px 17px;
   transition: all 1s ease-in-out;
-}
-.masServicios_speach .masServicios__speach__benefician .benefician_container:hover {
-  text-shadow: #f49c13 3px 4px 17px;
 }
 .masServicios_speach .masServicios__speach__benefician .benefician_container .benefician {
   text-align: left;
@@ -871,7 +867,7 @@
   -o-transition: all 1s ease-in-out;
 }
 .masServicios_title:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 
 .carousel_masServicios {
@@ -907,7 +903,7 @@
   -o-transition: all 1s ease-in-out;
 }
 .masServicios_calendly h3:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_calendly .container_calendly {
   width: 60%;
@@ -921,6 +917,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /*     #formularioMarca{
+          transition: all 1s ease-in-out;
+          &:hover{
+              box-shadow: 3px 4px 17px $color_amarillo2;
+              .formulario_contenedor_datos{
+                  h3{
+                      color: $color_amarillo2;
+                  }
+              };
+              .contenedor_inputs{
+                  color: $color_amarillo2;
+              }
+              .formulario_contenedor_textarea{
+                  h3{
+                      color: $color_amarillo2;
+                  }
+              }
+          }
+      } */
 }
 .masServicios_formulario h3 {
   margin-top: 2em;
@@ -935,7 +950,7 @@
   -o-transition: all 1s ease-in-out;
 }
 .masServicios_formulario h3:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_formulario .contacto_redes_container {
   display: flex;
@@ -968,9 +983,9 @@
   border-radius: 50%;
 }
 .masServicios_formulario .contacto_redes_container .contacto_redes .contacto_redes_anchord:hover {
-  color: #f49c13;
+  color: #FF41AA;
   border-radius: 50%;
-  box-shadow: 2px 2px 5px rgba(236, 129, 29, 0.89);
+  box-shadow: 2px 2px 5px #FF41AA;
   transition: all 0.4s ease-in-out;
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
@@ -1065,24 +1080,24 @@
   border-radius: 10px;
 }
 .masServicios_formulario .formulario_contenedor_textarea .contenedor_btn_formulario .btn_formulario:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 .masServicios_formulario .contacto_formulario {
   transition: all 1s ease-in-out;
 }
 .masServicios_formulario .contacto_formulario:hover {
-  box-shadow: 3px 4px 17px rgba(236, 129, 29, 0.89);
+  box-shadow: 3px 4px 17px #FF41AA;
 }
 .masServicios_formulario .contacto_formulario:hover .formulario_contenedor_datos h3 {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_formulario .contacto_formulario:hover .contenedor_inputs {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .masServicios_formulario .contacto_formulario:hover .formulario_contenedor_textarea h3 {
-  color: #f49c13;
+  color: #FF41AA;
 }
 
 .espaciado {
@@ -1307,8 +1322,8 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   align-items: center;
 }
 .section_presentacion .contenedor_presentacion .swiper-slide-active {
-  transition: all 2s ease-in-out;
-  color: #f49c13;
+  transition: all 1.5s ease-in-out;
+  color: #FF41AA;
 }
 .section_presentacion .contenedor_presentacion .swiper-slide img {
   display: block;
@@ -1378,9 +1393,9 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   border-radius: 10px;
 }
 .contenedor_btn_pulse .btn_pulse:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 
 .section_servicios {
@@ -1412,7 +1427,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_servicios h2:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_servicios .section_servicios_paragraph {
   width: 100%;
@@ -1433,7 +1448,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_servicios .section_servicios_paragraph span:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_servicios .particles-js-canvas-el {
   position: absolute;
@@ -1522,7 +1537,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 }
 .section_servicios .servicio_principal_container .caminoDigital_pie {
   width: 60%;
-  color: #f49c13;
+  color: #FF41AA;
   text-align: left;
   font-family: "Fugaz One", cursive;
   margin-top: 1em;
@@ -1555,10 +1570,10 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   transition: all 1s ease-in-out;
 }
 .section_servicios .container_content_impulso:hover {
-  box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+  box-shadow: #FF41AA 3px 4px 17px;
 }
 .section_servicios .container_content_impulso:hover .container_impulso_speach .impulso_title {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_servicios .container_content_impulso .contenedor_impulso_img {
   width: 8rem;
@@ -1651,7 +1666,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_servicios .carousel_title:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_servicios .asesorate_container {
   display: flex;
@@ -1671,9 +1686,9 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   border-radius: 10px;
 }
 .section_servicios .asesorate_container .asesorate_btn:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 .section_servicios .caminoDigital_container {
   display: flex;
@@ -1701,10 +1716,10 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   transition: all 1s ease-in-out;
 }
 .section_servicios .caminoDigital_container .container_content_caminoDigital:hover {
-  box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+  box-shadow: #FF41AA 3px 4px 17px;
 }
 .section_servicios .caminoDigital_container .container_content_caminoDigital:hover .caminoDigital_container_speach .caminoDigital_title {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_servicios .caminoDigital_container .container_content_caminoDigital .caminoDigital_container_img {
   width: 8rem;
@@ -1830,7 +1845,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros article .contenedor_nosotros_quienesSomos h2:hover, .section_nosotros article .contenedor_nosotros_Speach h2:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros article .contenedor_nosotros_quienesSomos p, .section_nosotros article .contenedor_nosotros_Speach p {
   width: 100%;
@@ -1850,7 +1865,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros article .contenedor_nosotros_quienesSomos span:hover, .section_nosotros article .contenedor_nosotros_Speach span:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros article .contenedor_nosotros h2 {
   margin-top: 1em;
@@ -1877,7 +1892,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_valores_title_container h3:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .nosotros_valores_title_container .nosotros_valores_paragraph {
   width: 100%;
@@ -1898,7 +1913,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_valores_title_container span:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .nosotros_valores_container {
   display: flex;
@@ -1953,7 +1968,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_title:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_paragraph {
   width: 100%;
@@ -1974,7 +1989,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_paragraph span:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_hashtag_container {
   width: 100%;
@@ -1998,7 +2013,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_hashtag_container .nosotros_mision_hashtag:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_hashtag_container .nosotros_mision_hashtag span {
   font-family: Arial, Helvetica, sans-serif;
@@ -2008,7 +2023,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_nosotros .nosotros_mision_container .nosotros_mision_hashtag_container .nosotros_mision_hashtag span:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_nosotros .beneficios_container {
   width: 100%;
@@ -2066,7 +2081,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   margin-bottom: 0.5em;
 }
 .section_contacto h2:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_redes_container {
   display: flex;
@@ -2099,9 +2114,9 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   border-radius: 50%;
 }
 .section_contacto .contacto_redes_container .contacto_redes .contacto_redes_anchord:hover {
-  color: #f49c13;
+  color: #FF41AA;
   border-radius: 50%;
-  box-shadow: 2px 2px 5px rgba(236, 129, 29, 0.89);
+  box-shadow: 2px 2px 5px #FF41AA;
   transition: all 0.4s ease-in-out;
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
@@ -2209,24 +2224,24 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   border-radius: 10px;
 }
 .section_contacto .formulario_contenedor_textarea .contenedor_btn_formulario .btn_formulario:hover {
-  color: #f49c13;
+  color: #FF41AA;
   animation: pulsate 1s ease-in-out;
-  border: 3px solid #f49c13;
+  border: 3px solid #FF41AA;
 }
 .section_contacto .contacto_formulario {
   transition: all 1s ease-in-out;
 }
 .section_contacto .contacto_formulario:hover {
-  box-shadow: 3px 4px 17px rgba(236, 129, 29, 0.89);
+  box-shadow: 3px 4px 17px #FF41AA;
 }
 .section_contacto .contacto_formulario:hover .formulario_contenedor_datos h3 {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_formulario:hover .contenedor_inputs {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_formulario:hover .formulario_contenedor_textarea h3 {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_redesUbicacion {
   margin-top: 1em;
@@ -2257,7 +2272,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_contacto .contacto_redesUbicacion .containerRedes h3:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_redesUbicacion .containerRedes .contacto_redes {
   display: flex;
@@ -2279,9 +2294,9 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   color: #E0E0E0;
 }
 .section_contacto .contacto_redesUbicacion .containerRedes .contacto_redes .contacto_redes_anchord:hover {
-  color: #f49c13;
+  color: #FF41AA;
   border-radius: 50%;
-  box-shadow: 2px 2px 5px rgba(236, 129, 29, 0.89);
+  box-shadow: 2px 2px 5px #FF41AA;
   transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
@@ -2334,7 +2349,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -o-transition: all 1s ease-in-out;
 }
 .section_contacto .contacto_calendly .contacto_calendly_title:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .section_contacto .contacto_calendly .calendly {
   width: 60%;
@@ -2378,7 +2393,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   font-weight: bold;
 }
 .container_calendar a h4:hover {
-  color: #f49c13;
+  color: #FF41AA;
 }
 .container_calendar a i {
   font-size: 30px;
