--- a/SCSS/_borderEfect.scss
+++ b/SCSS/_borderEfect.scss
@@ -69,16 +69,16 @@
 .valores_content, .beneficio_content{
     &:hover{
         span:nth-child(1){
-            background: linear-gradient(to right, transparent, $color_naranja_cohete);
+            background: linear-gradient(to right, transparent, $color_general2);
         };
         span:nth-child(2){
-            background: linear-gradient(to bottom, transparent, $color_naranja_cohete);
+            background: linear-gradient(to bottom, transparent, $color_general2);
         };
         span:nth-child(3){
-            background: linear-gradient(to left, transparent, $color_naranja_cohete); 
+            background: linear-gradient(to left, transparent, $color_general2); 
         };
         span:nth-child(4){
-            background: linear-gradient(to top, transparent, $color_naranja_cohete);
+            background: linear-gradient(to top, transparent, $color_general2);
         };
     }
 }
