--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -25,13 +25,13 @@
         transform: translateY(15rem);
         @include compatibilidad_transform(translateY(15rem));
         i{
-            color: $color_naranja_cohete;
+            color: $color_general2;
         }
     };
     &:hover{
-        box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+        box-shadow: $color_general2 3px 4px 17px;
         .card_title{
-            color: $color_naranja_cohete;
+            color: $color_general2;
         }
     };
 }
@@ -96,9 +96,9 @@
             border: 3px solid $color_gris_claro;
             border-radius: 10px;
             &:hover{
-                color: $color_naranja_cohete;
+                color: $color_general2;
                 animation: pulsate 1s ease-in-out;
-                border: 3px solid $color_naranja_cohete;
+                border: 3px solid $color_general2;
             };
         }
     }
@@ -150,11 +150,11 @@
     transition: all 1s ease-in-out;
     &:hover{
         transition: all 1s ease-in-out;
-        box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
-        outline: 1px solid $color_naranja_cohete;
+        box-shadow: $color_general2 3px 4px 17px;
+        outline: 1px solid $color_general2;
         outline-offset: -8px;
         .card_title{
-            color: $color_naranja_cohete;
+            color: $color_general2;
         }
     };
     .contenedor_btn_card{
@@ -172,9 +172,9 @@
             border: 3px solid $color_gris_claro;
             border-radius: 10px;
             &:hover{
-                color: $color_naranja_cohete;
+                color: $color_general2;
                 animation: pulsate 1s ease-in-out;
-                border: 3px solid $color_naranja_cohete;
+                border: 3px solid $color_general2;
             };
         }
     }
