--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -478,6 +478,65 @@ header{
             }
         }
     }
+    //Caracteristicas para cada impulso
+    #impulsoMarca{
+        &:hover{
+            box-shadow: $color_amarillo2 3px 4px 17px;
+            .container_impulso_speach{
+                .impulso_title{
+                    color: $color_amarillo2;
+                }
+            };  
+        }
+        .contenedor_btn_pulse{
+            .btn_pulse{
+                &:hover{
+                    color: $color_amarillo2;
+                    animation: pulsate-amarillo 1s ease-in-out;
+                    border: 3px solid $color_amarillo2;
+                };
+            }    
+        }
+    }
+    #impulsoVisual{
+        &:hover{
+            box-shadow: $color_verdelima 3px 4px 17px;
+            .container_impulso_speach{
+                .impulso_title{
+                    color: $color_verdelima;
+                }
+            };  
+        }
+        .contenedor_btn_pulse{
+            .btn_pulse{
+                &:hover{
+                    color: $color_verdelima;
+                    animation: pulsate-verde 1s ease-in-out;
+                    border: 3px solid $color_verdelima;
+                };
+            }    
+        }
+    }
+    #impulsoWeb{
+        &:hover{
+            box-shadow: $color_naranjaApagado 3px 4px 17px;
+            .container_impulso_speach{
+                .impulso_title{
+                    color: $color_naranjaApagado;
+                }
+            };  
+        }
+        .contenedor_btn_pulse{
+            .btn_pulse{
+                &:hover{
+                    color: $color_naranjaApagado;
+                    animation: pulsate-naranja 1s ease-in-out;
+                    border: 3px solid $color_naranjaApagado;
+                };
+            }    
+        }
+    }
+    //
     .carousel_title{
         color: $color_celeste_oscuro;
         font-family: $letra__principal;
@@ -1075,6 +1134,8 @@ footer{
     }
     h5{
         color: $color_gris_claro;
+        font-family: $letra__principal;
+        @include camuflaje;
     }
     a{
         text-decoration: none;
