--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -47,6 +47,7 @@
             margin-right: 2em;
             margin-left: 2em;
             width: 30%;
+            min-height: 35rem;
         }
     }
 }
